<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>

    <string name="camera_shoot_speed">快慢速</string>
    <string name="camera_beauty">美颜</string>
    <string name="camera_filter">滤镜</string>

    <string name="camera_photo">拍照</string>
    <string name="camera_video">录像</string>

    <!--弹窗-->
    <string name="camera_dialog_title">温馨提示</string>
    <string name="camera_dialog_message_permission">请打开权限</string>
    <string name="camera_dialog_message_give_up">确定放弃已经拍摄的媒体?</string>
    <string name="camera_authorization">授权</string>
    <string name="camera_exit">退出</string>

    <!-- 限制 -->
    <string name="camera_duration_max">已录制达最大时间</string>
    <string name="camera_duration_min">录制时间小于最小值</string>

    <!-- 错误 -->
    <string name="camera_sd_not_enough_record">内存空间不足，无法录制视频！</string>
    <string name="camera_error_insert_gallery">插入相册失败 </string>
    <string name="camera_error_permission_audio">无法录音,请打开录音权限</string>
    <string name="camera_error_permission_camera">未允许使用摄像头</string>
    <string name="camera_error_permission_audio_prompt">未允许使用录音</string>
    <string name="camera_error_code">错误代码</string>
    <string name="camera_error_path">路径错误</string>

    <!-- 美颜 -->
    <string name="camera_blue">磨皮</string>
    <string name="camera_whitening">亮肤</string>
    <string name="camera_ruddy">红润</string>
    <string name="camera_bigeye">大眼</string>
    <string name="camera_facelift">瘦脸</string>
    <string name="camera_five_senses">五官</string>


    <string name="camera_config_setting">设置</string>
    <string name="camera_music">音乐</string>
    <string name="camera_delay">倒计时</string>
    <string name="camera_flash">闪光灯</string>
    <string name="camera_swtich">翻转</string>


    <!--录制输出-->
    <string name="camera_record_bitrate">码率(kbps)</string>
    <string name="camera_record_size">分辨率</string>
    <string name="camera_record_volume">麦克风</string>

    <string name="camera_tone">调节</string>
    <string name="camera_reset">重置</string>
</resources>